--- a/README
+++ b/README
@@ -1,1 +1,27 @@
+Briefly summarize your client, Artemis Financial, and its software requirements. Who was the client? What issue did the company want you to address?
 
+The client was Artemis Financial, a financial services company.  The company wanted me to secure their RESTful web API from external threats and identify any vulnerabilities.
+
+What did you do well when you found your client’s software security vulnerabilities? Why is it important to code securely? What value does software security add to a company’s overall well-being?
+
+I did a good job of identifying possible vulnerabilities in the application and implementing techniques to address them.  It is important to code securely to prevent data breaches or theft of information, prevent or mitigate the harm caused by undiscovered vulnerabilities, and comply with regulatory requirements.  Software security protects a company from the financial and reputation costs of data breaches and other cyber attacks and helps them to maintain a trusted relationship with their clients.
+
+Which part of the vulnerability assessment was challenging or helpful to you?
+
+Suppressing false positive dependency vulnerabilities was the most challenging part of the assessment for me.
+
+How did you increase layers of security? In the future, what would you use to assess vulnerabilities and decide which mitigation techniques to use?
+
+I enforced the use of secure communication protocols, implemented encryption, input validation, and error handling.  In the future, I will probably rely on static testing and code review to identify vulnerabilities and decide which mitigation techniques to apply against them.
+
+How did you make certain the code and software application were functional and secure? After refactoring the code, how did you check to see whether you introduced new vulnerabilities?
+
+I relied on static testing, functional testing, and manual code review to ensure the application was functional and secure.  After refactoring the code, I used the Maven dependency check tool to determine if I had introduced new vulnerabilities.
+
+What resources, tools, or coding practices did you use that might be helpful in future assignments or tasks?
+
+I think that understanding how to use the Maven dependency check tool will be very helpful to me in the future.
+
+Employers sometimes ask for examples of work that you have successfully completed to show your skills, knowledge, and experience. What might you show future employers from this assignment?
+
+I might show future employers my implementation of a hashing function and checksum verification.
